--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
           <h1 id="project_title">Blowfish</h1>
           <h2 id="project_tagline">Block cipher implementation in _______</h2>
+          <h3>Team Venture Members:</h3>
+          <p><ul>
+            <li>Stephen Yingling</li>
+            <li>Chad Zawistowski</li>
+            <li>Wesley Wigham</li>
+          </ul></p>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/weswigham/blowfish/zipball/master">Download this project as a .zip file</a>
