--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="blowfish" class="anchor" href="#blowfish"><span class="octicon octicon-link"></span></a>blowfish</h1>
 
-<p>Block cipher implementation in _______</p>
+<h1>Block cipher implementation in _______</h1>
           <h3>Team Venture Members:</h3>
           <p><ul>
             <li>Stephen Yingling</li>
