--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <li>Chad Zawistowski</li>
           </ul></p>
       </section>
+      
+      <p><a href="http://weswigham.github.io/blowfish/files/Intro%20to%20Cryptography%20Proposal.pdf">Official Proposal</a></p>
     </div>
 
     <!-- FOOTER  -->
