--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Blowfish : Block cipher implementation in _______" />
+    <meta name="description" content="Blowfish : Block cipher implementation in python" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<h1>Block cipher implementation in _______</h1>
+<h1>Block cipher implementation in python</h1>
           <h3>Team Venture Members:</h3>
           <p><ul>
             <li>Wesley Wigham</li>
