--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <p><a href="http://weswigham.github.io/blowfish/files/Intro%20to%20Cryptography%20Proposal.pdf">Official Proposal</a></p>
       <p><a href="http://weswigham.github.io/blowfish/files/Blowfish.pdf">Presentation One</a></p>
       <p><a href="http://weswigham.github.io/blowfish/files/Blowfish%20Presentation%202.pdf">Final Presentation</a></p>
-      <p><a href="http://weswigham.github.io/blowfish/files/BlowfishDeliverablepaper.pdf"></a>Final Report</p>
-      <p><a href="http://weswigham.github.io/blowfish/files/Final.zip"></a>Final Deliverable Zip</p>
+      <p><a href="http://weswigham.github.io/blowfish/files/BlowfishDeliverablepaper.pdf">Final Report</a></p>
+      <p><a href="http://weswigham.github.io/blowfish/files/Final.zip">Final Deliverable Zip</a></p>
       </section>
     </div>
 
